[Feat]: add theme context and change collor pallete of the app

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,1 @@
-{"greet":"welcome to my news app"}
+{"copyright":"© All Rights reserved for Newsify","greet":"Welcome to Newsify","search":"Search for the latest news..."}
