--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,1 +1,1 @@
-{"greet":"bienvenido a mi aplicación de noticias"}
+{"copyright":"© Todos los derechos reservados para Newsify","greet":"Bienvenido a Newsify","search":"Busca las últimas noticias..."}
