--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,1 +1,1 @@
-{"greet":"bienvenue sur mon application d'actualités"}
+{"copyright":"© Tous droits réservés pour Newsify","greet":"Bienvenue sur Newsify","search":"Rechercher les dernières nouvelles..."}
