[Feat]: add theme toggle button component and input to search for news

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,1 +1,1 @@
-{"copyright":"© Todos los derechos reservados para Newsify","greet":"Bienvenido a Newsify","search":"Busca las últimas noticias..."}
+{"copyright":"© Todos los derechos reservados para Newsify","greet":"Bienvenido a Newsify","heading":"¡Busca las últimas noticias!","search_placeholder":"búsqueda..."}
