--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,1 +1,1 @@
-{"copyright":"© Tous droits réservés pour Newsify","greet":"Bienvenue sur Newsify","search":"Rechercher les dernières nouvelles..."}
+{"copyright":"© Tous droits réservés pour Newsify","greet":"Bienvenue sur Newsify","heading":"Recherchez les dernières nouvelles!","search_placeholder":"chercher..."}
