--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,1 @@
-{"copyright":"© All Rights reserved for Newsify","greet":"Welcome to Newsify","search":"Search for the latest news..."}
+{"copyright":"© All Rights reserved for Newsify","greet":"Welcome to Newsify","heading":"Search for the latest news!","search_placeholder":"search..."}
